# polygon-client-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: buildandtest.yml
examples/: dividends.rs
src/: client.rs  lib.rs  rest.rs  types.rs  websocket.rs
