[package]
name = "polygon-client"
description = "Rust client library for polygon.io"
version = "0.1.0"
authors = ["Matt Miller <mmiller@hick.org>"]
license-file = "LICENSE"
repository = "https://github.com/epakskape/polygon-client-rs"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = [ "json" ] }
tokio = { version = "1", features = [ "full" ] }
tokio-test = "0.4.2"
serde = { version = "1.0.126", features = [ "derive" ] }
serde_json = "1.0" 
chrono = { version = "0.4.19", features = [ "serde" ] }
lazy_static = "1.4.0"
tungstenite = { version = "0.15.0", features = [ "native-tls" ] }
tokio-tungstenite = { version = "0.15.0", features = [ "native-tls" ] }
url = "2.1.0"