[package]
name = "polygon-client"
description = "Rust client library for polygon.io"
version = "0.2.0"
authors = ["Matt Miller <mmiller@hick.org>"]
license = "MIT"
repository = "https://github.com/epakskape/polygon-client-rs"
readme = "README.md"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
url = "2.1.0"

reqwest = { version = "0.11.4", features = ["json"], optional = true }

tokio-tungstenite = { version = "0.20", features = ["native-tls"], optional = true }
thiserror = "1.0.50"
futures-util = { version = "0.3.29", features = ["sink"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
tokio-test = "0.4.2"
serde_json = "1"

[features]
default = ["rest", "websocket"]
rest = ["reqwest"]
websocket = ["tokio-tungstenite"]


[[example]]
name = "dividends"
required-features = ["rest"]
